# mdmE

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  icon.rc  meson.build  resource.h  todo.md
data/audio/: fggggggv.txt  some audio are the same.txt
data/kits/: kits.settings.json
data/kits/default/: kit.json
data/locales/: en.ini
data/sprites/: icon big.aseprite  icon.ase
include/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
include/imgui/: CMakeLists.txt
include/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_impl_sdlrenderer.cpp
include/imgui/misc/cpp/: imgui_stdlib.cpp
map/: info.json  map2.bms
script/: makenotes.py  notes.cpp  notes.txt
src/: CMakeLists.txt  audio.cpp  audio.h  bms.cpp  bms.h  chaneditor.cpp  chaneditor.h  data.cpp  data.h  drpc.cpp  drpc.h  editor.cpp  editor.h  kit.cpp  kit.h  locales.cpp  locales.h  logs.cpp  main.cpp  settings.h  ui.cpp  ui.h
src/commands/: add_note.cpp  add_note.h
src/data/project/: channel.h  chart.cpp  chart.h  measure.cpp  measure.h  note.h  project.cpp  project.h
src/helpers/: bms.cpp  bms.h  json.cpp  json.h  miscellaneous.h
thinking/: Editor description.md  make a kit.md  mdbms.md  todo.md
